--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,59 +1,59 @@
 Study=Study
 locale=zh
 
-# 登录界面
-用户登录=用户登录
-帐号=帐号
-密码=密码
-确认密码=确认密码
-忘记了密码=忘记了密码？
-登录=登录
-请输入正确的账号和密码=请输入正确的账号和密码！
-登出=登出
-用户信息=用户信息
-用户信息不存在=用户信息不存在！
+# \u767b\u5f55\u754c\u9762
+\u7528\u6237\u767b\u5f55=\u7528\u6237\u767b\u5f55
+\u5e10\u53f7=\u5e10\u53f7
+\u5bc6\u7801=\u5bc6\u7801
+\u786e\u8ba4\u5bc6\u7801=\u786e\u8ba4\u5bc6\u7801
+\u5fd8\u8bb0\u4e86\u5bc6\u7801=\u5fd8\u8bb0\u4e86\u5bc6\u7801\uff1f
+\u767b\u5f55=\u767b\u5f55
+\u8bf7\u8f93\u5165\u6b63\u786e\u7684\u8d26\u53f7\u548c\u5bc6\u7801=\u8bf7\u8f93\u5165\u6b63\u786e\u7684\u8d26\u53f7\u548c\u5bc6\u7801\uff01
+\u767b\u51fa=\u767b\u51fa
+\u7528\u6237\u4fe1\u606f=\u7528\u6237\u4fe1\u606f
+\u7528\u6237\u4fe1\u606f\u4e0d\u5b58\u5728=\u7528\u6237\u4fe1\u606f\u4e0d\u5b58\u5728\uff01
 
-# 所有界面共同使用
-检索=检索
-重置=重置
-添加=添加
-修改=修改
-保存=保存
-保存成功=保存成功
-保存失败，服务器发生异常=保存失败，服务器发生异常！
-确认=确认
-取消=取消
-删除=删除
-删除成功=删除成功
-导出=导出
-关闭=关闭
-是=是
-否=否
-自动生成=自动生成
-描述=描述
-登录日时=登录日时
-请输入=请输入
-请选择=请选择
-请求处理中=请求处理中...
-系统提示=系统提示
-返回登录界面=返回登录界面
-服务器连接超时，请重新登录=服务器连接超时，请重新登录
-您因权限不足，无法访问该资源=您因权限不足，无法访问该资源
+# \u6240\u6709\u754c\u9762\u5171\u540c\u4f7f\u7528
+\u68c0\u7d22=\u68c0\u7d22
+\u91cd\u7f6e=\u91cd\u7f6e
+\u6dfb\u52a0=\u6dfb\u52a0
+\u4fee\u6539=\u4fee\u6539
+\u4fdd\u5b58=\u4fdd\u5b58
+\u4fdd\u5b58\u6210\u529f=\u4fdd\u5b58\u6210\u529f
+\u4fdd\u5b58\u5931\u8d25\uff0c\u670d\u52a1\u5668\u53d1\u751f\u5f02\u5e38=\u4fdd\u5b58\u5931\u8d25\uff0c\u670d\u52a1\u5668\u53d1\u751f\u5f02\u5e38\uff01
+\u786e\u8ba4=\u786e\u8ba4
+\u53d6\u6d88=\u53d6\u6d88
+\u5220\u9664=\u5220\u9664
+\u5220\u9664\u6210\u529f=\u5220\u9664\u6210\u529f
+\u5bfc\u51fa=\u5bfc\u51fa
+\u5173\u95ed=\u5173\u95ed
+\u662f=\u662f
+\u5426=\u5426
+\u81ea\u52a8\u751f\u6210=\u81ea\u52a8\u751f\u6210
+\u63cf\u8ff0=\u63cf\u8ff0
+\u767b\u5f55\u65e5\u65f6=\u767b\u5f55\u65e5\u65f6
+\u8bf7\u8f93\u5165=\u8bf7\u8f93\u5165
+\u8bf7\u9009\u62e9=\u8bf7\u9009\u62e9
+\u8bf7\u6c42\u5904\u7406\u4e2d=\u8bf7\u6c42\u5904\u7406\u4e2d...
+\u7cfb\u7edf\u63d0\u793a=\u7cfb\u7edf\u63d0\u793a
+\u8fd4\u56de\u767b\u5f55\u754c\u9762=\u8fd4\u56de\u767b\u5f55\u754c\u9762
+\u670d\u52a1\u5668\u8fde\u63a5\u8d85\u65f6\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55=\u670d\u52a1\u5668\u8fde\u63a5\u8d85\u65f6\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55
+\u60a8\u56e0\u6743\u9650\u4e0d\u8db3\uff0c\u65e0\u6cd5\u8bbf\u95ee\u8be5\u8d44\u6e90=\u60a8\u56e0\u6743\u9650\u4e0d\u8db3\uff0c\u65e0\u6cd5\u8bbf\u95ee\u8be5\u8d44\u6e90
 
-## 账号管理
-# 属性
-帐号CD=帐号CD
-帐号ID=帐号ID
-用户名称=用户名称
-生日=生日
-介绍=介绍
-照片=照片
-是否锁定=是否锁定
-是否过期=是否过期
-凭证是否过期=凭证是否过期
-是否可用=是否可用
-# 表示信息
-密码和确认密码不一致=密码和确认密码不一致！
-您输入的帐号ID已存在=您输入的帐号ID已存在
-您输入的帐号ID可以使用=您输入的帐号ID可以使用
+## \u8d26\u53f7\u7ba1\u7406
+# \u5c5e\u6027
+\u5e10\u53f7CD=\u5e10\u53f7CD
+\u5e10\u53f7ID=\u5e10\u53f7ID
+\u7528\u6237\u540d\u79f0=\u7528\u6237\u540d\u79f0
+\u751f\u65e5=\u751f\u65e5
+\u4ecb\u7ecd=\u4ecb\u7ecd
+\u7167\u7247=\u7167\u7247
+\u662f\u5426\u9501\u5b9a=\u662f\u5426\u9501\u5b9a
+\u662f\u5426\u8fc7\u671f=\u662f\u5426\u8fc7\u671f
+\u51ed\u8bc1\u662f\u5426\u8fc7\u671f=\u51ed\u8bc1\u662f\u5426\u8fc7\u671f
+\u662f\u5426\u53ef\u7528=\u662f\u5426\u53ef\u7528
+# \u8868\u793a\u4fe1\u606f
+\u5bc6\u7801\u548c\u786e\u8ba4\u5bc6\u7801\u4e0d\u4e00\u81f4=\u5bc6\u7801\u548c\u786e\u8ba4\u5bc6\u7801\u4e0d\u4e00\u81f4\uff01
+\u60a8\u8f93\u5165\u7684\u5e10\u53f7ID\u5df2\u5b58\u5728=\u60a8\u8f93\u5165\u7684\u5e10\u53f7ID\u5df2\u5b58\u5728
+\u60a8\u8f93\u5165\u7684\u5e10\u53f7ID\u53ef\u4ee5\u4f7f\u7528=\u60a8\u8f93\u5165\u7684\u5e10\u53f7ID\u53ef\u4ee5\u4f7f\u7528
 
